--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,51 @@
-<div class="SiebelGo" style="display: none;"><span class="helper"></span>
-	<div>
+<div id="GHE_SiebelGo" style="display: none;"><span class="helper"></span>
+	<div class="popup">
 		<div class="popupCloseButton">×</div>
-		<div id="gce_divText">
-			<div class="link" toview="disp+rules"><h4>Dynamic!</h4></div>
+		<!-- <div id="gce_divText">
 			<div class="link" toview="disp+rules">Hello!!</div>
 			<div class="link" toview="disp+rules">Dispatch Rules</div>
 			<div class="link" toview="dm+editor">Data Map Editor</div>
 			<div class="link" toview="wf+deployment">Workflow Deployment</div>
+		</div> -->
+		<div>
+			<hr>
+			<h3>Environments</h3>
+			<div class="linksWrapperOutside">
+				<div class="linksWrapperInside">
+					<div class="link" url="http://dev1.com">Dev 1</div>
+					<div class="linkTab" url="http://google.com?t=d1">+tab</div>
+				</div>
+				<div class="linksWrapperInside">
+					<div class="link" url="http://dev2.com">Dev 2</div>
+					<div class="linkTab" url="http://google.com?t=d2">+tab</div>
+				</div>
+				<div class="linksWrapperInside">
+					<div class="link" url="http://dev3.com">Dev 3</div>
+					<div class="linkTab" url="http://google.com?t=d3">+tab</div>
+				</div>
+				<div class="linksWrapperInside">
+					<div class="link" url="http://dev4.com">Dev 4</div>
+					<div class="linkTab" url="http://google.com?t=d4">+tab</div>
+				</div>
+			</div>
+			<div class="linksWrapperOutside">
+				<div class="linksWrapperInside">
+					<div class="link" url="http://test1.com">Test 1</div>
+					<div class="linkTab" url="http://google.com?t=t1">+tab</div>
+				</div>
+				<div class="linksWrapperInside">
+					<div class="link" url="http://test2.com">Test 2</div>
+					<div class="linkTab" url="http://google.com?t=t2">+tab</div>
+				</div>
+				<div class="linksWrapperInside">
+					<div class="link" url="http://test3.com">Test 3</div>
+					<div class="linkTab" url="http://google.com?t=t3">+tab</div>
+				</div>
+				<div class="linksWrapperInside">
+					<div class="link" url="http://test4.com">Test 4</div>
+					<div class="linkTab" url="http://google.com?t=t4">+tab</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
